Fix - Mobile UI - Top nav was appearing behind pager right arrow.

--- a/MvcWebRole1/Content/styles/top-nav.css
+++ b/MvcWebRole1/Content/styles/top-nav.css
@@ -4,7 +4,7 @@
             background-color: #154B6D;
             padding-top: 5px;
             position: fixed;
-            z-index: 99;
+            z-index: 100;
         }
 
         ul.top-nav-bar {
